--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="view_book_description">View book description</string>
     <string name="description">Description</string>
     <string name="see_it_on_website">See it on website</string>
+    <string name="back">Back</string>
+    <string name="refresh">Refresh</string>
+    <string name="forward">Forward</string>
 </resources>
